--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -553,3 +553,303 @@
   line-height: 24px;
   color: #000;
 }
+
+#comments-wrapper {
+}
+
+#comments {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.product-review {
+  display: flex;
+  gap: 24px;
+  border-bottom: 1px solid #e4e4e4;
+  padding: 0 0 24px;
+  margin: 0 0 24px;
+  &.ticket-comment {
+    margin: 0 0 24px;
+  }
+  &:last-child {
+    margin-bottom: 0;
+    border-bottom: 0;
+    padding-bottom: 0;
+  }
+}
+
+.product-review__side {
+  flex-shrink: 0;
+  width: 100px;
+
+  @include --max-md {
+    display: none;
+  }
+}
+
+.product-review__side-avatar {
+  margin-bottom: 12px;
+  width: 100%;
+  display: flex;
+
+  img {
+    border-radius: 10px;
+    width: 100%;
+    height: auto;
+  }
+}
+
+.product-review__side-name {
+  color: #333;
+  font-size: 14px;
+  line-height: 1;
+}
+
+.product-review__main {
+  flex-grow: 1;
+}
+
+.product-review__head {
+  flex-grow: 1;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: auto 12px auto;
+  gap: 0px 0px;
+  grid-template-areas:
+    'rating . date'
+    '. . .'
+    'stars . .';
+
+  // @include --max-md {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  // }
+}
+
+.product-review__head-avatar {
+  text-align: center;
+  margin-bottom: 10px;
+  width: 100px;
+  margin-right: 20px;
+
+  img {
+    border-radius: 10px;
+    width: 100%;
+    height: auto;
+  }
+
+  @include --md {
+    display: none;
+  }
+}
+
+.product-review__head-name {
+  color: #333;
+  line-height: 1.3;
+  font-size: 20px;
+
+  @include --md {
+    display: none;
+  }
+}
+
+.product-review__head-rating {
+  color: #333;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1;
+  grid-area: rating;
+}
+
+.product-review__head-date {
+  font-size: 14px;
+  line-height: 1;
+  grid-area: date;
+}
+
+.product-review__head-stars {
+  display: flex;
+  grid-area: stars;
+
+  span {
+    background: url('../images/star-gray.svg') no-repeat 50% 50%;
+    background-size: cover;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    margin-right: 2px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &._marked {
+      background-image: url('../images/star.svg');
+    }
+  }
+}
+
+.product-review__text {
+  font-size: 16px;
+  line-height: 1.25;
+  margin-top: 12px;
+}
+
+.rating-details {
+  display: grid;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: auto 24px auto;
+  grid-template-rows: auto 12px auto 24px auto;
+  gap: 0px 0px;
+  grid-template-areas:
+    'value . stars'
+    '. . .'
+    'count count count'
+    '. . .'
+    'add add add';
+  justify-content: center;
+  border-bottom: 1px solid #e4e4e4;
+  padding: 0 0 24px;
+  margin: 0 0 24px;
+}
+
+.rating-details__value {
+  grid-area: value;
+  font-size: 20px;
+  color: #0699bc;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.rating-details__stars {
+  grid-area: stars;
+}
+
+.rating-details__count {
+  grid-area: count;
+  font-size: 16px;
+  line-height: 1;
+  text-align: center;
+}
+
+.rating-details__add {
+  grid-area: add;
+  > * {
+    width: 100%;
+    svg {
+      transform: rotate(-90deg);
+    }
+    &[data-reviews-form-status='active'] svg {
+      transform: rotate(90deg);
+    }
+  }
+}
+
+.reviews-form {
+  padding-bottom: 24px;
+  margin-bottom: 24px;
+  border-bottom: 1px solid #e4e4e4;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  row-gap: 16px;
+  column-gap: 16px;
+  &#comment-form {
+    border-bottom: 1px solid #e4e4e4;
+    padding-bottom: 24px;
+  }
+  #comment-preview-placeholder {
+    max-width: auto;
+    margin: initial !important;
+    border: 4px solid #f4f4f4;
+    padding: 12px;
+  }
+}
+
+.reviews-form__cell {
+}
+
+.reviews-form__cell_wide {
+  grid-column: span 2 / span 2;
+}
+
+.reviews-form {
+  display: none;
+  &[data-reviews-form-status='active'] {
+    display: grid;
+  }
+  .markItUp {
+    margin: 0;
+  }
+  #comment-editor {
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 8px;
+    border: 1px solid #e3e3e3;
+    padding: 12px;
+    font-size: 16px;
+  }
+  .submit {
+    width: 100%;
+  }
+  .preview {
+    width: 100%;
+  }
+}
+
+.comment-rating {
+  display: flex;
+  gap: 6px;
+  flex-direction: column;
+  border: 1px solid #e3e3e3;
+  border-radius: 8px;
+  padding: 6px 12px;
+  box-sizing: border-box;
+}
+
+.comment-rating__label {
+  display: flex;
+  align-items: center;
+  line-height: 1;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #999;
+  font-family: var(--font-sans-narrow);
+}
+
+.comment-rating__control {
+  display: flex;
+}
+
+.product-delivery {
+}
+
+.product-delivery__title {
+  font-size: 20px;
+  color: #000;
+  line-height: 1.25;
+  font-weight: 400;
+  margin-bottom: 24px;
+  text-align: center;
+}
+
+.product-delivery__calc {
+}
+
+.product-delivery__info {
+  margin-top: 24px;
+  color: #bababa;
+  font-size: 16px;
+  line-height: 1.25;
+  text-align: center;
+  a {
+    color: inherit;
+    text-decoration: underline;
+    &:hover {
+      color: #000;
+    }
+  }
+}
