--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,6 +11,7 @@
 @import 'modals';
 @import 'category';
 @import 'product';
+@import 'calc';
 
 @import 'contacts';
 
@@ -3417,166 +3418,6 @@ jdiv {
     height: 100%;
     background: url('../img/star.svg') no-repeat 0 50%;
     background-size: auto 100%;
-  }
-}
-
-.product-review {
-  display: flex;
-}
-
-.product-review-left {
-  margin-right: 20px;
-  width: 140px;
-  min-width: 140px;
-  @media (max-width: $breakpoint-mini-max) {
-    display: none;
-  }
-}
-
-.product-review-left__avatar {
-  text-align: center;
-  margin-bottom: 10px;
-  width: 100px;
-  img {
-    border-radius: 10px;
-    max-width: 100%;
-  }
-}
-
-.product-review-left__name {
-  color: #333;
-  font-size: 14px;
-  line-height: 1.3;
-}
-
-.product-review-center {
-  display: flex;
-  align-items: center;
-}
-
-.product-review-center__avatar {
-  text-align: center;
-  margin-bottom: 10px;
-  float: left;
-  width: 100px;
-  margin-right: 20px;
-  img {
-    border-radius: 10px;
-    max-width: 100%;
-  }
-  @media (min-width: $breakpoint-small) {
-    display: none;
-  }
-}
-
-.product-review-center__info {
-}
-
-.product-review-center__name {
-  color: #333;
-  line-height: 1.3;
-  font-size: 20px;
-  @media (min-width: $breakpoint-small) {
-    display: none;
-  }
-}
-
-.product-review-center__rating {
-  color: #333;
-  font-size: 14px;
-  font-weight: 700;
-}
-
-.product-review-center__stars {
-  span {
-    background: url('../img/star-gray.svg') no-repeat 50% 50%;
-    background-size: cover;
-    width: 15px;
-    height: 15px;
-    display: inline-block;
-    margin-right: 5px;
-    &:last-child {
-      margin-right: 0;
-    }
-    &._marked {
-      background-image: url('../img/star.svg');
-    }
-  }
-}
-
-.product-review-center__date {
-}
-
-.product-reviews__list {
-  padding: 0;
-  margin: 0;
-  clear: both;
-}
-.product-review {
-  border-bottom: 1px solid #e4e4e4;
-  padding: 0 0 15px;
-  margin: 0 0 15px !important;
-  overflow: hidden;
-}
-.product-review__info {
-  flex-grow: 1;
-}
-.product-review-center__info {
-  flex-grow: 1;
-  @media (max-width: $breakpoint-mini-max) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-.product-review__name,
-.product-review__date {
-}
-
-.product-review__text {
-  @media (max-width: $breakpoint-mini-max) {
-    clear: both;
-    font-size: 18px;
-    line-height: 1.35;
-    margin-top: 17px;
-  }
-}
-
-.rating-inputs {
-  overflow: hidden;
-  display: inline-block;
-  font-size: 0;
-  position: relative;
-  vertical-align: middle;
-  margin: 0;
-  min-width: 116px;
-}
-.rating-input {
-  float: right;
-  width: 20px;
-  height: 20px;
-  padding: 0;
-  margin: 0 0 0 -20px;
-  opacity: 0;
-}
-.rating-inputs:hover .rating-star:hover,
-.rating-inputs:hover .rating-star:hover ~ .rating-star,
-.rating-input:checked ~ .rating-star {
-  background-image: url('../img/star.svg');
-}
-.rating-star,
-.rating-inputs:hover .rating-star {
-  margin-left: 4px;
-  position: relative;
-  float: right;
-  display: block;
-  width: 20px;
-  cursor: pointer;
-  height: 20px;
-  background: url('../img/star-gray.svg') no-repeat 50% 50%;
-  background-size: cover;
-  &:last-child {
-    margin-left: 0;
   }
 }
 
@@ -10445,273 +10286,6 @@ td.u-product-options__items {
     margin-bottom: 17px;
     font-weight: 400;
     letter-spacing: -0.04em;
-    text-align: center;
-  }
-}
-
-.u-calc {
-  margin: 0 25px;
-  @media (max-width: $breakpoint-small-max) {
-    margin: 0;
-  }
-}
-
-.u-calc__title {
-  // color: #62625f;
-  // font-size: 19px;
-  // line-height: 1;
-  // letter-spacing: -0.01em;
-  // margin-bottom: 20px;
-
-  color: #005976;
-  font-size: 24px;
-  line-height: 1.25;
-
-  text-align: center;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  @media (max-width: $breakpoint-small-max) {
-    // color: #005976;
-    // font-weight: 700;
-    // font-size: 16px;
-    font-size: 20px;
-    // margin-bottom: 25px;
-    margin-bottom: 15px;
-  }
-}
-
-.u-calc-city {
-  display: flex;
-  align-items: center;
-  margin-bottom: 12px;
-  @media (max-width: $breakpoint-small-max) {
-    flex-wrap: wrap;
-    background: #f5f5fd;
-    padding: 14px 4px 9px;
-    margin: 0 -3px 20px;
-  }
-}
-
-.u-calc-city__form {
-  width: 56%;
-  display: flex;
-  @media (max-width: $breakpoint-small-max) {
-    width: 100%;
-  }
-}
-
-.u-calc-city__name {
-  color: #005976;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: 0.019em;
-  min-width: 20%;
-  padding-right: 2%;
-  @media (max-width: $breakpoint-small-max) {
-    width: 100%;
-    padding-right: 0;
-    font-weight: bold;
-    text-align: center;
-    font-size: 22px;
-    margin-bottom: 11px;
-  }
-}
-
-.u-calc-city__select {
-  border: 1px solid #ebebea;
-  background: #f8f8f9;
-  box-shadow: none;
-  border-radius: 0;
-  color: #4a4c4c;
-  padding: 0 15px;
-  min-height: 35px;
-  box-sizing: border-box;
-  font-size: 16px;
-}
-
-.u-calc-city__submit {
-  border: 1px solid #cdcdd1;
-  background: #cdcdd1;
-  color: #000;
-  min-height: 35px;
-  box-sizing: border-box;
-  padding: 0 25px;
-  text-transform: uppercase;
-  font-size: 14px;
-  letter-spacing: 0.019em;
-  cursor: pointer;
-  &:hover {
-    background: darken(#cdcdd1, 5%);
-  }
-}
-
-.u-calc-form {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-left: -9px;
-  margin-top: -9px;
-  @media (max-width: $breakpoint-small-max) {
-    margin-left: -12px;
-    margin-top: -12px;
-  }
-  .choices__list--dropdown .choices__item--selectable {
-    padding-right: 10px;
-    &::after {
-      display: none;
-    }
-  }
-  .choices__inner,
-  .choices[data-type*='select-one'] .choices__inner {
-    padding-bottom: 0;
-    padding-top: 0;
-    padding-left: 11px;
-    padding-right: 11px;
-    min-height: 35px;
-    border-color: #ebebea;
-    background-color: #f8f8f9;
-    border-radius: 0;
-  }
-  .choices[data-type*='select-one']:after {
-    content: '';
-    height: 8px;
-    width: 8px;
-    border: 2px solid #909191;
-    border-top-color: transparent;
-    border-left-color: transparent;
-    position: absolute;
-    right: 11.5px;
-    top: 50%;
-    margin-top: -5px;
-    pointer-events: none;
-    transform: translateY(-50%) rotate(45deg);
-  }
-  .choices[data-type*='select-one'].is-open:after {
-    border-color: transparent #909191 #909191 transparent;
-    margin-top: -5px;
-  }
-}
-
-.u-calc-form__group {
-  width: 41.6%;
-  padding-top: 9px;
-  padding-left: 9px;
-  @media (max-width: $breakpoint-small-max) {
-    width: 100%;
-    padding-top: 12px;
-    padding-left: 12px;
-  }
-}
-
-.u-calc-form__label {
-  color: #087592;
-  font-size: 19px;
-  line-height: 1;
-  letter-spacing: 0.005em;
-  margin-bottom: 4px;
-}
-
-.u-calc-form__field {
-}
-
-.u-calc-form__input {
-  border: 1px solid #ebebea;
-  background: #f8f8f9;
-  box-shadow: none;
-  border-radius: 0;
-  color: #4a4c4c;
-  font-size: 16px;
-  padding: 0 15px;
-  min-height: 35px;
-  box-sizing: border-box;
-  width: 100%;
-}
-
-.u-calc-form__select {
-  border: 1px solid #ebebea;
-  background: #f8f8f9;
-  color: #4a4c4c;
-  font-size: 16px;
-  padding: 0 15px;
-  min-height: 35px;
-  box-sizing: border-box;
-  width: 100%;
-}
-
-.u-calc-form__submit {
-  border: 1px solid #cdcdd1;
-  width: 100%;
-  background: #504e4e;
-  color: #ffffff;
-  min-height: 35px;
-  box-sizing: border-box;
-  padding: 0 25px;
-  text-transform: uppercase;
-  font-size: 16px;
-  letter-spacing: 0.019em;
-  cursor: pointer;
-  &:hover {
-    background: darken(#504e4e, 5%);
-  }
-  @media (max-width: $breakpoint-small-max) {
-    font-size: 14px;
-  }
-}
-
-.u-calc-result {
-  font-size: 20px;
-  line-height: 1.333;
-  color: #49494a;
-  background: #f8f8f9;
-  border: 1px solid #ebebea;
-  padding: 10px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 17px;
-  @media (max-width: $breakpoint-small-max) {
-    background: #f5f5fd;
-    padding: 0 10px 3px;
-    border: none;
-    margin: 8px -3px;
-  }
-}
-
-.u-calc-result-item {
-  font-size: 20px;
-  line-height: 1.333;
-  display: flex;
-  align-items: center;
-  margin: 6px 10px;
-  @media (max-width: $breakpoint-small-max) {
-    width: 100%;
-    font-size: 16px;
-    margin: 4px 0 5px;
-  }
-}
-
-.u-calc-result-item__label {
-  color: #49494a;
-  margin-right: 16px;
-  letter-spacing: 0.05em;
-}
-
-.u-calc-result-item__value {
-  color: #0a829a;
-  letter-spacing: 0.05em;
-}
-
-.u-calc-info {
-  margin-top: 25px;
-  color: #6d6968;
-  font-size: 16px;
-  line-height: 1.2;
-  margin-left: 25px;
-  margin-right: 25px;
-  @media (max-width: $breakpoint-small-max) {
-    font-size: 15px;
-    margin-left: 0;
-    margin-right: 0;
     text-align: center;
   }
 }
