--- a/src/scss/calc.scss
+++ b/src/scss/calc.scss
@@ -66,7 +66,9 @@
   font-size: 14px;
   font-weight: bold;
   cursor: pointer;
-  border-radius: 0 4px 4px 0;
+  border-radius: 4px;
+  margin-left: -2px;
+  z-index: 2;
   &:hover {
     background: rgb(5, 154, 186);
     color: #fff;
