--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -323,6 +323,7 @@
   text-transform: uppercase;
   cursor: pointer;
   font-size: 16px;
+  white-space: nowrap;
   [data-product]:not([data-product-status='added']) & {
     display: none;
   }
