--- a/src/scss/calc.scss
+++ b/src/scss/calc.scss
@@ -47,7 +47,7 @@
   border: 1px solid rgb(225, 227, 230);
   background: #fff;
   box-shadow: none;
-  border-radius: 4px 0 0 4px;
+  border-radius: 4px;
   color: #4a4c4c;
   padding: 0 12px;
   min-height: 36px;
@@ -67,7 +67,7 @@
   font-weight: bold;
   cursor: pointer;
   border-radius: 4px;
-  margin-left: -2px;
+  margin-left: -4px;
   z-index: 2;
   &:hover {
     background: rgb(5, 154, 186);
@@ -148,17 +148,6 @@
   width: 100%;
 }
 
-.u-calc-form__select {
-  border: 1px solid #ebebea;
-  background: #f8f8f9;
-  color: #4a4c4c;
-  font-size: 16px;
-  padding: 0 15px;
-  min-height: 35px;
-  box-sizing: border-box;
-  width: 100%;
-}
-
 .u-calc-form__submit {
   border: 2px solid rgb(8, 152, 189);
   width: 100%;
@@ -221,9 +210,9 @@
   margin-right: 25px;
 }
 
-.suggestions-wrapper {
-  position: absolute;
-  left: 0;
-  top: 100%;
-  width: 100%;
-}
+// .suggestions-wrapper {
+//   position: absolute;
+//   left: 0;
+//   top: 100%;
+//   width: 100%;
+// }
