--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -121,75 +121,7 @@
   }
 }
 
-.home-recent {
-  --swiper-navigation-size: 46px;
-  --swiper-navigation-sides-offset: 20px;
-
-  overflow: hidden;
-  background-color: rgb(232, 232, 232);
-  padding: 48px 0;
-
-  .swiper-button-prev,
-  .swiper-button-next {
-    width: var(--swiper-navigation-size);
-    border-radius: 50%;
-    box-shadow: 0px 0px 9px 0px rgba(0, 25, 41, 0.08);
-    background-color: rgba(0, 0, 0, 0.2);
-    filter: none;
-    color: #fff;
-    transition: 0.3s ease;
-    &:hover {
-      filter: none;
-      box-shadow: 1px 8px 9px 0px rgba(0, 25, 41, 0.15);
-      background-color: rgba(0, 0, 0, 0.3);
-    }
-    &::after {
-      font-size: calc(var(--swiper-navigation-size) / 2);
-    }
-  }
-  .swiper-slide {
-    box-sizing: border-box;
-    height: auto;
-    display: flex;
-  }
-  .swiper-container {
-    overflow: hidden;
-    position: relative;
-    margin: -15px;
-    padding: 15px;
-  }
-
-  @include --max-md {
-    --swiper-navigation-size: 32px;
-    --swiper-navigation-top-offset: 86px;
-
-    padding: 24px 0 32px;
-
-    .swiper-button-prev,
-    .swiper-button-next {
-      color: #616161;
-      background-color: rgba(255, 255, 255, 0.5);
-      &:hover {
-        background: #fff;
-      }
-    }
-  }
-}
-
-.home-recent__title {
-  font-size: 24px;
-  text-transform: uppercase;
-  color: #010101;
-  margin-bottom: 20px;
-  line-height: 1;
-
-  @include --max-md {
-    font-size: 16px;
-    margin-bottom: 24px;
-  }
-}
-
-.home-other {
+.section-other {
   margin: 40px 0;
 
   @include --max-md {
@@ -198,7 +130,7 @@
   }
 }
 
-.home-other__work-process {
+.section-other__work-process {
   @include --max-md {
     margin-left: calc(var(--container-padding) * -1);
     margin-right: calc(var(--container-padding) * -1);
