--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1,7 +1,7 @@
 .product-layout {
   display: grid;
   grid-template-columns: 600px 60px 1fr 60px 280px;
-  grid-template-rows: auto 40px auto 80px auto;
+  grid-template-rows: auto 40px auto 80px 1fr;
   grid-auto-columns: 1fr;
   gap: 0;
   grid-auto-flow: row;
@@ -12,6 +12,7 @@
     'gallery . . . similar'
     'gallery . description . similar';
   margin-top: 20px;
+  margin-bottom: 48px;
 }
 
 .product-layout__headline {
@@ -117,6 +118,7 @@
   .swiper-slide {
     border: 1px solid #e3e3e3;
     box-sizing: border-box;
+    position: relative;
     img {
       display: block;
       max-width: 100%;
@@ -125,6 +127,14 @@
       height: auto;
       user-select: none;
       opacity: 0.6;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
     }
   }
   .swiper-slide:hover {
@@ -260,16 +270,16 @@
   font-size: 30px;
   text-transform: uppercase;
   color: #000000;
-  line-height: 1;
+  line-height: 36px;
   font-weight: normal;
-  margin: 0;
+  margin: 12px 0;
 }
 
 .product-rating {
 }
 
 .product-rating__stars {
-  --size: 20px;
+  --size: 24px;
 
   width: calc(var(--size) * 5);
   height: var(--size);
@@ -420,6 +430,10 @@
   line-height: 18px;
   color: #9e9e9e;
   text-decoration: none;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+  background: transparent;
   border-bottom: 1px dashed currentColor;
   &:hover {
     color: #000;
@@ -430,7 +444,7 @@
   display: grid;
   align-items: center;
   grid-template-columns: auto 1fr auto 4fr;
-  grid-template-rows: auto 12px auto;
+  grid-template-rows: auto 16px auto;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
@@ -801,20 +815,20 @@
 }
 
 .comment-rating {
-  display: flex;
-  gap: 6px;
-  flex-direction: column;
-  border: 1px solid #e3e3e3;
-  border-radius: 8px;
-  padding: 6px 12px;
-  box-sizing: border-box;
+  position: relative;
 }
 
 .comment-rating__label {
   display: flex;
   align-items: center;
   line-height: 1;
-  font-size: 12px;
+  font-size: 11px;
+  top: 8px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  left: 12px;
   text-transform: uppercase;
   color: #999;
   font-family: var(--font-sans-narrow);
@@ -822,6 +836,15 @@
 
 .comment-rating__control {
   display: flex;
+  box-sizing: border-box;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 16px;
+  border: 1px solid #e3e3e3;
+  border-radius: 8px;
+  height: 52px;
+  display: flex;
+  align-items: center;
 }
 
 .product-delivery {
@@ -851,5 +874,100 @@
     &:hover {
       color: #000;
     }
+  }
+}
+
+.product-similar {
+}
+
+.product-similar__title {
+  height: 46px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 12px;
+  background-color: #e6f5f8;
+  text-align: center;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #222222;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.product-similar__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.product-slider {
+  --swiper-navigation-size: 46px;
+  --swiper-navigation-sides-offset: 20px;
+
+  overflow: hidden;
+  padding: 48px 0;
+
+  &_gray {
+    background-color: rgb(232, 232, 232);
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: var(--swiper-navigation-size);
+    border-radius: 50%;
+    box-shadow: 0px 0px 9px 0px rgba(0, 25, 41, 0.08);
+    background-color: rgba(0, 0, 0, 0.2);
+    filter: none;
+    color: #fff;
+    transition: 0.3s ease;
+    &:hover {
+      filter: none;
+      box-shadow: 1px 8px 9px 0px rgba(0, 25, 41, 0.15);
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+    &::after {
+      font-size: calc(var(--swiper-navigation-size) / 2);
+    }
+  }
+  .swiper-slide {
+    box-sizing: border-box;
+    height: auto;
+    display: flex;
+  }
+  .swiper-container {
+    overflow: hidden;
+    position: relative;
+    margin: -15px;
+    padding: 15px;
+  }
+
+  @include --max-md {
+    --swiper-navigation-size: 32px;
+    --swiper-navigation-top-offset: 86px;
+
+    padding: 24px 0 32px;
+
+    .swiper-button-prev,
+    .swiper-button-next {
+      color: #616161;
+      background-color: rgba(255, 255, 255, 0.5);
+      &:hover {
+        background: #fff;
+      }
+    }
+  }
+}
+
+.product-slider__title {
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #010101;
+  margin-bottom: 24px;
+  line-height: 1;
+
+  @include --max-md {
+    font-size: 16px;
+    margin-bottom: 24px;
   }
 }
