--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,6 +12,7 @@
 @import 'category';
 @import 'product';
 @import 'calc';
+@import 'cheaper';
 
 @import 'contacts';
 
@@ -7290,22 +7291,6 @@ textarea.order-control {
   margin-top: 14px;
 }
 
-.cheaper-form {
-  .uk-width-small-1-3 {
-    @media (max-width: $breakpoint-small-max) {
-      margin-bottom: 12px;
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-  }
-}
-
-.cheaper-form__row {
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
-
 .cheaper-form__input {
   box-shadow: none;
   border-radius: 0;
@@ -7333,69 +7318,6 @@ textarea.order-control {
   }
   &:-moz-placeholder {
     color: #777777;
-  }
-}
-
-.cheaper-form__subtitle {
-  color: #5c5e5f;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.5;
-  letter-spacing: 0.8px;
-  margin-top: 23px;
-  span {
-    color: #03405c;
-  }
-}
-
-.cheaper-form__list {
-  padding: 0;
-  margin: 12px 0 14px;
-  list-style: none;
-  li {
-    color: #5c5e5f;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    position: relative;
-    padding-left: 10px;
-    &::before {
-      content: '';
-      width: 7px;
-      height: 7px;
-      border: 1px solid #9ba5af;
-      background-color: #03405c;
-      position: absolute;
-      left: 0;
-      top: 6px;
-      border-radius: 50%;
-      box-sizing: border-box;
-    }
-  }
-}
-
-.cheaper-form__submit {
-  padding: 0 10px;
-  min-height: 38px;
-  text-align: center;
-  border: none;
-  background: #03405c;
-  color: #ffffff;
-  font-size: 17px;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 0.3px;
-  width: 260px;
-  max-width: 100%;
-  margin: 0 auto;
-  display: block;
-  box-sizing: border-box;
-  cursor: pointer;
-  &:hover {
-    background: lighten(#03405c, 5%);
-  }
-  @media (max-width: $breakpoint-small-max) {
-    width: 100%;
   }
 }
 
