--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -35,6 +35,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-decoration: none;
   gap: 4px;
   height: 44px;
   padding: 0 24px;
@@ -376,5 +377,132 @@ body {
   background-size: cover;
   &:last-child {
     margin-left: 0;
+  }
+}
+
+.quantity {
+  position: relative;
+  flex-shrink: 0;
+  width: 95px;
+  height: 48px;
+
+  @include --max-lg {
+    width: 72px;
+  }
+}
+
+.quantity__input {
+  border-radius: 4px;
+  border: 1px solid #e3e3e3;
+  background: #e3e3e3;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  min-width: 0;
+  padding-left: 12px;
+  padding-right: 52px;
+  font-weight: bold;
+  text-align: center;
+  font-size: 16px;
+  background: #fff;
+  -moz-appearance: textfield;
+
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+
+  &:focus {
+    outline: none;
+    border-color: #000;
+  }
+
+  @include --max-lg {
+    padding-left: 4px;
+    padding-right: 36px;
+    font-size: 14px;
+  }
+}
+
+.quantity__plus,
+.quantity__minus {
+  position: absolute;
+  min-width: 0;
+  right: 1px;
+  background: #f4f4f4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #9c9c9c;
+  font-size: 18px;
+  width: 40px;
+  height: 50%;
+  border: none;
+  cursor: pointer;
+  border-left: 1px solid #e3e3e3;
+  box-sizing: border-box;
+
+  @include --hover {
+    color: #000;
+    background: #e8e8e8;
+  }
+
+  @include --max-lg {
+    width: 32px;
+  }
+}
+
+.quantity__plus {
+  top: 1px;
+  border-radius: 0 2px 0 0;
+  border-bottom: 1px solid #e3e3e3;
+}
+
+.quantity__minus {
+  bottom: 1px;
+  border-radius: 0 0 2px 0;
+  border-top: 1px solid #e3e3e3;
+}
+
+.cart-quantity {
+  display: flex;
+}
+
+.cart-quantity__minus,
+.cart-quantity__plus {
+  background: #f4f4f4;
+  border: 0;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #9c9c9c;
+
+  &:hover {
+    color: #000;
+    background: #e8e8e8;
+  }
+}
+
+.cart-quantity__input {
+  background: transparent;
+  border: 0;
+  width: 48px;
+  height: 32px;
+  padding: 0;
+  font-size: 14px;
+  color: #000000;
+  font-weight: 700;
+  text-align: center;
+  -moz-appearance: textfield;
+
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
   }
 }
