--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -15,6 +15,10 @@
       color: #f18a16;
     }
   }
+  @include --max-xl {
+    font-size: 14px;
+    padding: 16px;
+  }
 }
 
 .cart-auth__title {
@@ -37,6 +41,11 @@
   margin: 48px 0;
   list-style: none;
   gap: 48px;
+
+  @include --max-md {
+    gap: 12px;
+    margin: 24px 0;
+  }
 }
 
 .cart-nav__item {
@@ -54,6 +63,19 @@
     color: inherit;
     text-decoration: none;
   }
+
+  @include --max-xl {
+    font-size: 18px;
+  }
+  @include --max-lg {
+    font-size: 16px;
+  }
+  @include --max-md {
+    font-size: 12px;
+    span {
+      display: none;
+    }
+  }
 }
 
 .cart-total {
@@ -64,7 +86,16 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 12px;
+
+  @include --max-xl {
+    padding: 24px 16px;
+    gap: 8px;
+  }
+}
+
+.cart-total__divider {
+  width: 100%;
 }
 
 .cart-total__title {
@@ -73,12 +104,20 @@
   color: #000000;
   font-weight: 700;
   line-height: 1;
+
+  @include --max-xl {
+    font-size: 14px;
+  }
 }
 
 .cart-total__count {
   font-size: 16px;
   color: #3a3a3a;
   line-height: 1;
+
+  @include --max-xl {
+    font-size: 12px;
+  }
 }
 
 .cart-total__total {
@@ -86,6 +125,10 @@
   color: #3a3a3a;
   font-weight: 500;
   line-height: 1;
+
+  @include --max-xl {
+    font-size: 14px;
+  }
 }
 
 .cart-total__cost {
@@ -93,6 +136,10 @@
   color: #0699bc;
   font-weight: 500;
   line-height: 1;
+
+  @include --max-xl {
+    font-size: 16px;
+  }
 }
 
 .cart-side {
@@ -101,6 +148,10 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  @include --max-lg {
+    top: 101px;
+  }
 }
 
 .cart-submit {
@@ -118,13 +169,20 @@
   border: none;
   box-sizing: border-box;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 16px;
   text-transform: uppercase;
   text-align: center;
 
   @include --hover {
     background: #eed20e;
     color: #000;
+  }
+
+  @include --max-xl {
+    font-size: 14px;
+    height: 48px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
 
@@ -133,12 +191,16 @@
   background-color: #f8f8f8;
   border: 1px solid #e3e3e3;
   padding: 24px;
+
+  @include --max-xl {
+    padding: 16px;
+  }
 }
 
 .cart-coupon__title {
   display: block;
   font-size: 14px;
-  line-height: 14px;
+  line-height: 1;
   text-transform: uppercase;
   color: #000000;
   font-weight: 700;
@@ -160,6 +222,12 @@
   color: #3f3f3f;
   box-sizing: border-box;
   min-width: 0;
+  flex-grow: 1;
+
+  @include --max-xl {
+    padding: 0 8px;
+    font-size: 11px;
+  }
 }
 
 .cart-coupon__submit {
@@ -180,6 +248,11 @@
   &:hover {
     color: #fff;
     background: #0699bc;
+  }
+
+  @include --max-xl {
+    padding: 0 8px;
+    font-size: 11px;
   }
 }
 
@@ -202,7 +275,18 @@
 .cart-layout {
   display: flex;
   gap: 64px;
-  margin: 48px 0 96px;
+  margin-bottom: 96px;
+
+  @include --max-xl {
+    gap: 48px;
+  }
+  @include --max-lg {
+    gap: 36px;
+  }
+  @include --max-md {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
 }
 
 .cart-layout__main {
@@ -210,11 +294,34 @@
   display: flex;
   flex-direction: column;
   gap: 36px;
+
+  @include --max-md {
+    gap: 20px;
+  }
 }
 
 .cart-layout__side {
   width: 320px;
   flex-shrink: 0;
+
+  @include --max-xl {
+    width: 280px;
+  }
+  @include --max-lg {
+    width: 264px;
+  }
+  @include --max-md {
+    width: 100%;
+  }
+}
+
+.cart-items {
+  @include --max-md {
+    padding-top: 32px;
+    border-top: 1px solid #f3f3f3;
+    padding-bottom: 16px;
+    border-bottom: 1px solid #f3f3f3;
+  }
 }
 
 .cart-item {
@@ -233,22 +340,60 @@
       30fr 24px minmax(min-content, 8fr) 24px 112px 24px minmax(min-content, 10fr)
       24px 32px;
   }
+  @include --max-xl {
+    grid-template-columns:
+      30fr 16px minmax(min-content, 8fr) 16px 96px 16px minmax(min-content, 10fr)
+      16px 28px;
+  }
+  @include --max-lg {
+    grid-template-columns: 64px 24px minmax(min-content, 8fr) 16px 96px 16px minmax(
+        min-content,
+        10fr
+      );
+    grid-template-rows: auto 16px auto;
+    grid-template-areas:
+      'product product product product product product product'
+      '. . . . . . .'
+      'remove . price . quantity . amount';
+  }
+  @include --max-md {
+    grid-template-columns: 64px 24px min-content 1fr min-content;
+    grid-template-rows: auto 24px auto 24px auto;
+    grid-template-areas:
+      'product product product product product'
+      '. . . . .'
+      'remove . quantity quantity quantity'
+      '. . . . .'
+      '. . price . amount';
+  }
 }
 
 .cart-item + .cart-item {
   margin-top: 36px;
   padding-top: 36px;
   border-top: 1px solid #f3f3f3;
+
+  @include --max-md {
+    padding-top: 32px;
+    margin-top: 16px;
+    border-top-color: #f3f3f3;
+  }
 }
 
 .cart-item__product {
   grid-area: product;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 24px;
 
   @include --max-2xl {
     gap: 16px;
+  }
+  @include --max-xl {
+    gap: 12px;
+  }
+  @include --max-lg {
+    gap: 24px;
   }
 }
 
@@ -261,6 +406,7 @@
   width: 100px;
   display: flex;
   align-items: flex-start;
+  align-self: flex-start;
 
   img {
     width: 100%;
@@ -272,13 +418,47 @@
   @include --max-2xl {
     width: 80px;
   }
+  @include --max-xl {
+    width: 64px;
+  }
 }
 
-.cart-item__product-article {
+.cart-item__product-meta {
   font-size: 14px;
   color: #acacbc;
   line-height: 1.25;
   margin-top: 8px;
+  display: flex;
+  flex-wrap: wrap;
+
+  span {
+    padding-right: 12px;
+    margin-right: 12px;
+    position: relative;
+    &::after {
+      content: '';
+      width: 1px;
+      height: 10px;
+      background: currentColor;
+      position: absolute;
+      right: 0;
+      top: 50%;
+      margin-top: -6px;
+      opacity: 0.4;
+    }
+    &:last-child {
+      padding-right: 0;
+      margin-right: 0;
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  @include --max-xl {
+    font-size: 12px;
+    margin-top: 4px;
+  }
 }
 
 .cart-item__product-title {
@@ -289,6 +469,10 @@
   a {
     color: inherit;
     text-decoration: none;
+  }
+
+  @include --max-xl {
+    font-size: 16px;
   }
 }
 
@@ -333,18 +517,19 @@
   }
 }
 
-.cart-item__product-options {
-  font-size: 14px;
-  color: #acacbc;
-  line-height: 1.25;
-  margin-top: 8px;
-}
-
 .cart-item__price {
   grid-area: price;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 16px;
+
+  @include --max-xl {
+    gap: 12px;
+  }
+  @include --max-md {
+    gap: 0;
+  }
 }
 
 .cart-item__price-label {
@@ -352,8 +537,21 @@
   line-height: 1;
   color: #9e9e9e;
   text-transform: uppercase;
-  margin-bottom: 16px;
   text-align: center;
+
+  @include --max-xl {
+    font-size: 14px;
+  }
+  @include --max-lg {
+    text-align: left;
+  }
+  @include --max-md {
+    font-size: 12px;
+    line-height: 20px;
+    border-bottom: 1px solid #f3f3f3;
+    width: 100%;
+    text-transform: none;
+  }
 }
 
 .cart-item__price-value {
@@ -363,6 +561,14 @@
   line-height: 32px;
   white-space: nowrap;
   text-align: center;
+
+  @include --max-xl {
+    line-height: 28px;
+    font-size: 16px;
+  }
+  @include --max-lg {
+    text-align: left;
+  }
 }
 
 .cart-item__quantity {
@@ -370,6 +576,17 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 16px;
+
+  @include --max-xl {
+    gap: 12px;
+  }
+  @include --max-md {
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 8px;
+  }
 }
 
 .cart-item__quantity-label {
@@ -377,8 +594,14 @@
   line-height: 1;
   color: #9e9e9e;
   text-transform: uppercase;
-  margin-bottom: 16px;
   text-align: center;
+
+  @include --max-xl {
+    font-size: 14px;
+  }
+  @include --max-md {
+    text-transform: none;
+  }
 }
 
 .cart-item__quantity-controls {
@@ -390,6 +613,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 16px;
+
+  @include --max-xl {
+    gap: 12px;
+  }
+  @include --max-md {
+    gap: 0;
+  }
 }
 
 .cart-item__amount-label {
@@ -397,8 +628,22 @@
   line-height: 1;
   color: #9e9e9e;
   text-transform: uppercase;
-  margin-bottom: 16px;
   text-align: center;
+
+  @include --max-xl {
+    font-size: 14px;
+  }
+  @include --max-lg {
+    text-align: right;
+  }
+  @include --max-md {
+    font-size: 12px;
+    line-height: 20px;
+    border-bottom: 1px solid #f3f3f3;
+    width: 100%;
+    text-transform: none;
+    text-align: left;
+  }
 }
 
 .cart-item__amount-value {
@@ -408,6 +653,14 @@
   line-height: 32px;
   white-space: nowrap;
   text-align: center;
+
+  @include --max-xl {
+    line-height: 28px;
+    font-size: 16px;
+  }
+  @include --max-lg {
+    text-align: right;
+  }
 }
 
 .cart-item__remove {
@@ -415,6 +668,28 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  gap: 16px;
+
+  &::before {
+    content: '';
+    display: block;
+    height: 16px;
+  }
+
+  @include --max-xl {
+    gap: 12px;
+
+    &::before {
+      height: 14px;
+    }
+  }
+
+  @include --max-md {
+    &::before {
+      display: none;
+    }
+  }
 }
 
 .cart-item__remove-button {
@@ -429,9 +704,9 @@
   font-size: 12px;
   text-transform: uppercase;
   line-height: 20px;
-  margin-top: 32px;
   color: #9e9e9e;
   cursor: pointer;
+  box-sizing: border-box;
   padding: 0;
 
   &:hover {
@@ -453,5 +728,16 @@
     span {
       display: none;
     }
+  }
+
+  @include --max-xl {
+    width: 28px;
+    height: 28px;
+  }
+
+  @include --max-md {
+    color: #878787;
+    border: 1px solid #878787;
+    border-radius: 50%;
   }
 }
