--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -487,6 +487,12 @@ body {
     color: #000;
     background: #e8e8e8;
   }
+
+  @include --max-xl {
+    width: 28px;
+    height: 28px;
+    font-size: 16px;
+  }
 }
 
 .cart-quantity__input {
@@ -504,5 +510,11 @@ body {
   &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button {
     -webkit-appearance: none;
+  }
+
+  @include --max-xl {
+    width: 40px;
+    height: 28px;
+    font-size: 12px;
   }
 }
