--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -335,6 +335,7 @@ body:has(.header) {
   display: block;
   padding: 0;
   text-decoration: none;
+  letter-spacing: -0.005em;
 
   &:hover {
     color: #f18a16;
